--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pre-commit = "^3.2.2"
 pyupgrade = "^3.3.1"
 autoflake = "^2.0.2"
 python-telegram-bot = "^20.2"
+pydantic = "^1.10.7"
 
 
 [tool.poetry.group.dev.dependencies]
