--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ autoflake = "^2.0.2"
 python-telegram-bot = "^20.2"
 pydantic = "^1.10.7"
 loguru = "^0.7.0"
+requests = "^2.29.0"
+bs4 = "^0.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -24,8 +26,6 @@ pylint = "^2.17.2"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
-
 
 [tool.isort]
 # https://github.com/timothycrosley/isort/
