--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,11 +17,14 @@ pydantic = "^1.10.7"
 loguru = "^0.7.0"
 requests = "^2.29.0"
 bs4 = "^0.0.1"
+firebase = "^4.0.1"
+firebase-admin = "^6.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
 pylint = "^2.17.2"
+ptipython = "^1.0.1"
 
 [build-system]
 requires = ["poetry-core"]
