--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ bs4 = "^0.0.1"
 firebase = "^4.0.1"
 firebase-admin = "^6.1.0"
 tenacity = "^8.2.2"
+aiogram = "^2.25.1"
 
 
 [tool.poetry.group.dev.dependencies]
